--- a/style.css
+++ b/style.css
@@ -1,23 +1,22 @@
-:root{
+:root {
   --box-shadow: 1px 1px 5px 1px rgba(52, 52, 52, 0.408);
-  --border-search: .5px solid rgb(184, 184, 184);
-  --gradientebackground: 0deg, rgba(9, 106, 5, 0.421),rgba(0, 0, 0, 0.421);
+  --border-search: 0.5px solid rgb(184, 184, 184);
+  --gradientebackground: 0deg, rgba(9, 106, 5, 0.421), rgba(0, 0, 0, 0.421);
 }
 
-*{
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
 }
 
-
-.hero{
+.hero {
   width: 100%;
   height: 100%;
 }
 
-.information{
+.information {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -25,16 +24,15 @@
   width: 100%;
   min-height: 400px;
   height: 60vh;
-  background-image:
-  linear-gradient(var(--gradientebackground))
-  ,url("images/heroreal.jpg");
+  background-image: linear-gradient(var(--gradientebackground)),
+    url("images/heroreal.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-.information-text{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.information-text {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   display: flex;
   color: white;
   height: 100%;
@@ -47,42 +45,42 @@
 }
 
 .information h2,
-.information-text a{
+.information-text a {
   font-weight: bold;
   text-decoration: none;
   color: white;
 }
 
-.information a{
+.information a {
   height: 110px;
   font-size: 5rem;
-  border-bottom: .5rem solid rgb(117, 208, 177, 0.8);
+  border-bottom: 0.5rem solid rgb(117, 208, 177, 0.8);
   border-radius: 1rem;
 }
 
-#firts-letter{
+#firts-letter {
   color: rgb(117, 208, 177);
   font-size: 6.5rem;
 }
 
-.information h2{
+.information h2 {
   padding-top: 2rem;
   font-style: italic;
   text-shadow: 5px 5px 3px rgba(0, 0, 0, 0.523);
-  
 }
 
-
-
-
-#input-btn{
+#input-btn {
   font-size: 20px;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
   color: rgb(255, 255, 255);
   width: 30%;
-  background: rgb(34,193,195);
-  background: linear-gradient(90deg, rgba(34,193,195,1) 15%, rgb(184, 239, 103) 97%);
+  background: rgb(34, 193, 195);
+  background: linear-gradient(
+    90deg,
+    rgba(34, 193, 195, 1) 15%,
+    rgb(184, 239, 103) 97%
+  );
 
   text-decoration: none;
   height: 100%;
@@ -90,7 +88,7 @@
   border-bottom-right-radius: 1rem;
 }
 
-#input-search{
+#input-search {
   border-top-left-radius: 1rem;
   font-size: 18px;
   border: none;
@@ -102,28 +100,26 @@
   outline: none;
 }
 
-
-#contenedor-buscador{
+#contenedor-buscador {
   margin-bottom: 20px;
   display: flex;
   width: 90vw;
-  height: 10vh ;
+  height: 10vh;
   justify-content: center;
   min-height: 50px;
   align-items: center;
   background-color: rgb(0, 255, 170);
   border-radius: 1rem;
   box-shadow: var(--box-shadow);
-
 }
 
-#input-search::placeholder{
+#input-search::placeholder {
   color: rgb(151, 169, 152);
   font-style: italic;
   font-size: 15px;
 }
 
-#contenedor-peliculas{
+#contenedor-peliculas {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -134,116 +130,110 @@
   /* background-color: aqua; */
 }
 
-#poster{
+#poster {
   width: 40vw;
   height: 30vh;
   min-height: 250px;
   border-radius: 1rem;
   box-shadow: var(--box-shadow);
-
 }
 
-#peliculas{
-  max-width:40vw ;
+#peliculas {
+  max-width: 40vw;
   margin-top: 20px;
   animation-name: aparecer;
-  animation-duration: .7s;
-
+  animation-duration: 0.7s;
 }
 
 @keyframes aparecer {
-  
-  0%{
+  0% {
     opacity: 0;
-
   }
 
-  10%{
+  10% {
     opacity: 0.1;
   }
 
-  15%{
+  15% {
     opacity: 0.15;
   }
 
-  20%{
+  20% {
     opacity: 0.2;
   }
 
-  30%{
+  30% {
     opacity: 0.2;
   }
 
-  40%{
+  40% {
     opacity: 0.2;
   }
 
-  50%{
+  50% {
     opacity: 0.5;
   }
 
-  70%{
+  70% {
     opacity: 0.7;
   }
 
-  75%{
+  75% {
     opacity: 0.75;
   }
 
-  80%{
+  80% {
     opacity: 0.8;
   }
 
-  85%{
+  85% {
     opacity: 0.85;
   }
 
-  90%{
+  90% {
     opacity: 0.9;
-
   }
 
-  100%{
+  100% {
     opacity: 1;
   }
-
-
-
 }
 
-
-#peliculas:hover{
+#peliculas:hover {
   transform: scale(1.1);
   transition: all 0.5s;
   cursor: pointer;
 }
 
-#contenedor-error{
+#contenedor-error {
   justify-content: center;
   align-items: center;
   display: flex;
   width: 100vw;
   height: 60vh;
   min-height: 400px;
-  background: rgb(34,193,195);
-  background: linear-gradient(90deg, rgba(34,193,195,0.3) 15%, rgb(184, 239, 103, 0.3) 97%);
+  background: rgb(34, 193, 195);
+  background: linear-gradient(
+    90deg,
+    rgba(34, 193, 195, 0.3) 15%,
+    rgb(184, 239, 103, 0.3) 97%
+  );
   overflow-y: auto;
 }
 
-#imgerror{
+#imgerror {
   width: 350px;
   height: 350px;
   border-radius: 100%;
-  animation: aparecer .25s;
-
+  animation: aparecer 0.25s;
 }
 
-figcaption{
+figcaption {
   text-align: center;
   cursor: pointer;
 }
 
-#description{
+#description {
   font-size: 1.2rem;
   display: flex;
   flex-direction: column;
@@ -253,91 +243,89 @@ figcaption{
 
   justify-content: center;
   /* border: 1px solid black; */
-  animation: descripcion .5s;
+  animation: descripcion 0.5s;
 }
 
 @keyframes descripcion {
-
-  0%{
+  0% {
     transform: scale(0.5);
   }
 
-  10%{
+  10% {
     transform: scale(0.6);
   }
 
-  20%{
+  20% {
     transform: scale(0.7);
   }
 
-  30%{
+  30% {
     transform: scale(0.9);
   }
 
-  40%{
+  40% {
     transform: scale(0.95);
   }
 
-  50%{
+  50% {
     transform: scale(0.99);
   }
 
-  60%{
+  60% {
     transform: scale(1);
   }
-
-  
 }
 
-#description h3{
-  
+#description h3 {
   font-size: 1.5rem;
-  margin: .5rem;
+  margin: 0.5rem;
   text-align: center;
 }
 
-.info-desc{
+.info-desc {
   text-align: center;
   font-weight: bold;
   margin: 2px;
 }
 
-.desc{
+.desc {
   justify-content: center;
   overflow-y: scroll;
   margin-top: 1rem;
 }
 
-.contenedor-peliculas-recom{
+.contenedor-peliculas-recom {
   display: flex;
   width: 100%;
   height: 40vh;
   min-height: 300px;
   overflow-x: auto;
-  border-top: .5px solid rgb(210, 209, 209);
+  border-top: 0.5px solid rgb(210, 209, 209);
   padding-top: 1rem;
   box-shadow: var(--box-shadow);
   overflow-y: hidden;
-  background: rgb(34,193,195);
-  background: linear-gradient(90deg, rgba(34,193,195,0.5) 15%, rgb(184, 239, 103,0.5) 97%);
-
+  background: rgb(34, 193, 195);
+  background: linear-gradient(
+    90deg,
+    rgba(34, 193, 195, 0.5) 15%,
+    rgb(184, 239, 103, 0.5) 97%
+  );
 }
-#peliculas-recom{
+#peliculas-recom {
   /* background-color: bisque; */
-  max-width:40vw ;
-  margin: .5rem;
+  max-width: 40vw;
+  margin: 0.5rem;
   margin-top: 0;
   margin-bottom: 0;
   animation-name: aparecer;
-  animation-duration: .7s;
-  
+  animation-duration: 0.7s;
 }
 
-.similar-movies-style{
+.similar-movies-style {
   font-style: italic;
   font-size: 1.2rem;
   margin-top: 1.5rem;
-  margin-bottom: .3rem;
+  margin-bottom: 0.3rem;
   width: 100%;
 }
 
@@ -353,14 +341,12 @@ figcaption{
   height: 10px; /*alto del scroll horizontal*/
 }
 
-#contenedor-img{
+#contenedor-img {
   display: none;
 }
 
-
 @media (min-width: 860px) {
-
-  #contenedor-peliculas{
+  #contenedor-peliculas {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -370,79 +356,80 @@ figcaption{
     min-height: 500px;
     /* background-color: aqua; */
   }
-  
-  #poster{
+
+  #poster {
     width: 15rem;
     height: 20rem;
     border-radius: 1rem;
     box-shadow: var(--box-shadow);
-  
   }
-  
-  #peliculas{
+
+  #peliculas {
     width: 200px;
     margin: 20px;
     animation-name: aparecer;
-    animation-duration: .7s;
-  
+    animation-duration: 0.7s;
   }
 
-  .contenedor-peliculas-recom{
+  .contenedor-peliculas-recom {
     display: flex;
     min-height: 350px;
     width: 100%;
     height: 42vh;
   }
 
-  .information{
+  .information {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     flex-direction: column;
     height: 58vh;
     min-height: 500px;
-    background-position:center ;
+    background-position: center;
     background-size: auto;
     background-repeat: repeat;
   }
-  
-  .information a{
+
+  .information a {
     height: 220px;
     font-size: 10rem;
     border-bottom: 1rem solid rgb(117, 208, 177, 0.8);
     border-radius: 1.5rem;
   }
-  
-  #firts-letter{
+
+  #firts-letter {
     color: rgb(117, 208, 177);
     font-size: 13rem;
   }
-  
-  .information h2{
+
+  .information h2 {
     font-size: 3rem;
     color: rgb(208, 208, 208);
   }
 
-  #input-btn{
+  #input-btn {
     font-size: 2rem;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     color: rgb(255, 255, 255);
     width: 30%;
     max-width: 250px;
-    background: rgb(34,193,195);
-    background: linear-gradient(90deg, rgba(34,193,195,1) 15%, rgb(184, 239, 103) 97%);
-  
+    background: rgb(34, 193, 195);
+    background: linear-gradient(
+      90deg,
+      rgba(34, 193, 195, 1) 15%,
+      rgb(184, 239, 103) 97%
+    );
+
     text-decoration: none;
     height: 100%;
     border: none;
     border-radius: 1rem;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-
   }
-  
-  #input-search{
+
+  #input-search {
     border-top-left-radius: 0;
     font-size: 18px;
     border: none;
@@ -456,13 +443,13 @@ figcaption{
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
   }
-  
-  #contenedor-buscador{
+
+  #contenedor-buscador {
     margin-bottom: 20px;
     display: flex;
     width: 70vw;
     max-width: 55rem;
-    height: 8vh ;
+    height: 8vh;
     min-height: 4rem;
     justify-content: center;
     align-items: center;
@@ -470,31 +457,28 @@ figcaption{
     border-radius: 1rem;
     box-shadow: var(--box-shadow);
   }
-  
-  #input-search::placeholder{
+
+  #input-search::placeholder {
     color: rgb(151, 169, 152);
     font-style: italic;
     font-size: 15px;
   }
-  
-  
+
   *::-webkit-scrollbar {
     width: 0px; /*ancho del scroll vertical*/
     height: 10px; /*alto del scroll horizontal*/
-  
   }
 
-  #contenedor-descripcion{
+  #contenedor-descripcion {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
     height: 100%;
     min-height: 500px;
-
   }
 
-  #description{
+  #description {
     font-size: 1.3rem;
     display: flex;
     flex-direction: column;
@@ -503,10 +487,10 @@ figcaption{
     height: 100%;
     min-height: 500px;
     justify-content: center;
-    animation: descripcion .5s;
+    animation: descripcion 0.5s;
   }
 
-  #description h3{
+  #description h3 {
     font-size: 2rem;
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -514,27 +498,26 @@ figcaption{
     text-align: initial;
     color: rgb(117, 208, 177);
   }
-  
-  .info-desc{
+
+  .info-desc {
     text-align: initial;
     font-weight: bold;
     margin: 2px;
   }
-  
-  .desc{
+
+  .desc {
     justify-content: center;
     overflow-y: scroll;
     margin-top: 1rem;
   }
 
-  
-  #contenedor-img{
+  #contenedor-img {
     min-height: 300px;
     min-width: 250px;
     display: block;
   }
 
-  #img{
+  #img {
     width: 30vw;
     height: 50vh;
     min-height: 340px;
@@ -546,24 +529,26 @@ figcaption{
     box-shadow: var(--box-shadow);
   }
 
-  #contenedor-error{
+  #contenedor-error {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
     min-height: 600px;
-    background: rgb(34,193,195);
-    background: linear-gradient(90deg, rgba(34,193,195,0.3) 15%, rgb(184, 239, 103, 0.3) 97%);
+    background: rgb(34, 193, 195);
+    background: linear-gradient(
+      90deg,
+      rgba(34, 193, 195, 0.3) 15%,
+      rgb(184, 239, 103, 0.3) 97%
+    );
     overflow: hidden;
   }
-  
-  #imgerror{
+
+  #imgerror {
     width: 600px;
     height: 600px;
     border-radius: 100%;
-    animation: aparecer .25s;
-
-  
+    animation: aparecer 0.25s;
   }
 }
